# aquamarine

./: .gitignore  AmApi.cpp  AmApi.h  CMakeLists.txt  CONTRIBUTING.md  ConnectionsInfo.hpp  build.sh  main.cpp  readme.md  readme.txt  rebuild_start.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: optimization-issue-template.md
.github/workflows/: build_aqamarine.yml  build_linux.yml  build_linux_master.yml  build_mac.yml  build_master_branch.yml  build_minimal_linux.yml  build_minimal_windows.yml  build_windows.yml  ci.yml
analyze/: AffinityComparer.cpp  AffinityComparer.h  IComparer.h  ThresholdDiffChecker.cpp  ThresholdDiffChecker.h  TresholdDiffChecker.cpp  TresholdDiffChecker.h
analyze/algorithm/: BfsObjectDetector.cpp  BfsObjectDetector.h  DiffObjectDetector.cpp  DiffObjectDetector.h  IObjectDetector.h  IObjectMovementDetector.h  ImagePair.cpp  ImagePair.h  Object.cpp  Object.h  ObjectBase.cpp  ObjectBase.h  ObjectDetector.cpp  ObjectDetector.h  ObjectRectangle.cpp  ObjectRectangle.h
analyze/algorithm/movement/: IMovementDetector.h  MovementDetector.cpp  MovementDetector.h
common/: AllocationException.hpp  AmException.hpp  Constants.hpp  Context.hpp  ExceptionError.hpp  FileAccessException.hpp  Logger.hpp  ThreadPool.hpp  Timers.hpp  Types.hpp
common/exceptions/: AllocationException.hpp  AmException.hpp  FileAccessException.hpp  WrongFormatException.hpp
common/types/: Color24b.hpp  Color24bDiff.hpp  ColorChannels.hpp  ColorChannelsDiff.hpp  Matrix.hpp
configuration/: Configuration.hpp  ConfigurationReader.hpp
database/: DataBaseCommunicator.cpp  DataBaseCommunicator.h
demo/windows64/: configuration.csv
extraction/: BmpDrawer.hpp  BmpExtractor.cpp  BmpExtractor.h  ExtractorFactory.cpp  ExtractorFactory.h  IExtractor.h  IMultipleBmpExtractor.h  IMultipleExtractor.h  ImageDrawer.cpp  ImageDrawer.hpp  JpgExtractor.cpp  JpgExtractor.h  MultipleBmpExtractor.cpp  MultipleBmpExtractor.h  MultipleExtractor.cpp  MultipleExtractor.h
golang/: main.go
inputs/: configuration.csv
qt/: CMakeLists.txt  assets.qrc  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
scripts/: directory_scan_and_compare.py  single_compare.py
service/: ConnectionsInfo.cpp  ConnectionsInfo.h  IService.h  Service.cpp  Service.h  SilberService.cpp  SilberService.h
service/report/: DatabaseReportService.cpp  DatabaseReportService.h  DrawingReportService.cpp  DrawingReportService.h  IReportService.h
sh_mem/: CMakeLists.txt  ClientProcCommunicator.cpp  ClientProcCommunicator.h  Message.hpp  ProcCommunicator.cpp  ProcCommunicator.h  ServerProcCommunicator.cpp  ServerProcCommunicator.h  SharedMemoryReceiver.cpp  SharedMemoryReceiver.h  SharedMemorySender.cpp  SharedMemorySender.h  main.cpp
unit_tests/: AffinityComparerTest.cpp  AmApiTest.cpp  BmpExtractorTest.cpp  BmpReaderTest.cpp  BmpReaderTest.hpp  CMakeLists.txt  DataBaseCommunicatorTest.cpp  ExtractorFactoryTest.cpp  JpgExtractorTest.cpp  MatrixTest.cpp  MessagingTest.cpp  MockMultipleExtractor.h  MockObjectDetector.h  MovementDetectorTest.cpp  MultipleExtractorTest.cpp  ObjectDetectorTest.cpp  ObjectTest.cpp  TestBase.hpp  ThresholdDiffCheckerTest.cpp  generate_coverage_report.sh  main.cpp  make_and_run_tests.sh  prepare_build.sh  run_tests.sh
unit_tests/cmake/: CodeCoverage.cmake
